# telecom-qoe-analytics

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_data_profiling_eda.ipynb  02_statistical_analysis.ipynb  03_ml_regression.ipynb  04_ml_classification.ipynb  05_unsupervised_timeseries.ipynb  06_executive_summary.ipynb
schemas/: v1_0.json
src/telecom_qoe_analytics/: __init__.py  data_loader.py  schema.py
